Implementation of station, stations, wallet

--- a/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Client/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,5 @@
 <div class="navbar">
-    <a (click)="navigateToBikeStations()">Bike Stations</a>
-    <a href="#topic2">Topic 2</a>
-    <a href="#topic3">Topic 3</a>
+    <a (click)="navigateToBikeStations()">Stations</a>
     <div class="right">
         <ng-container *ngIf="isLoggedIn(); else notLoggedIn">
             <div class="dropdown">
