--- a/Client/src/app/nav-bar/nav-bar.component.css
+++ b/Client/src/app/nav-bar/nav-bar.component.css
@@ -44,6 +44,7 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
+    z-index: 1000; /* so dropdown is visible in front of the map */
   }
   
 .dropdown-content a {
