Implementation of returning bikes to parking place

--- a/Client/src/app/ticket/ticket.component.html
+++ b/Client/src/app/ticket/ticket.component.html
@@ -7,7 +7,7 @@
     <p><strong>Ticket status:</strong> {{ticket.status}}</p>
     <p><strong>Price:</strong> {{ticket.price}}</p>
 
-    <div *ngIf="ticket.status === 'Expired'">
+    <div *ngIf="ticket.status === 'Used'">
         <button type="button" (click)="toggleReview()">Review</button>
         <div *ngIf="showReview">
             <app-review [ticket]="ticket" (reviewed)="handleReviewed()"></app-review>
@@ -15,15 +15,35 @@
     </div>
     
     <div *ngIf="ticket.status === 'Active'">
-        <button type="button" (click)="parkBike()">Park bike</button> 
+        <div *ngIf="parkingPlaces && parkingPlaces.length > 0">
+            <label>Select Station:</label>
+            <select [(ngModel)]="selectedStation" (change)="onStationSelectionChange()">
+                <option disabled [ngValue]="-1" selected>Select a station</option>
+              <option *ngFor="let station of stations">{{ station }}</option>
+            </select>
+            <br>
+            <label>Select Parking place number:</label>
+            <select [(ngModel)]="selectedParkingPlace" [disabled]="!selectedStation">
+                <option disabled [ngValue]="-1" selected>Select a parking place number</option>
+            <option *ngFor="let number of parkingPlaceNumbers">{{ number }}</option>
+            </select>
+          </div>
+          <br>
+          <button type="button" (click)="parkBike()">Park bike</button>
     </div>    
 
     <div *ngIf="ticket.status === 'Inactive'">
-        <button type="button" (click)="requestQR()" *ngIf="!qrCodeData">Request QR code</button>
-        <button type="button" (click)="useBike()" *ngIf="qrCodeData">Use bike</button>
+        <button type="button" (click)="useBike()" *ngIf="isUseable">Use bike</button>
         <button type="button" (click)="returnTicket()" *ngIf="isReturnable">Return ticket</button>  
         <div *ngIf="qrCodeData">
             <img [src]="qrCodeData" alt="QR Code">
         </div>
     </div>
+
+    <div *ngIf="errorMessage" class="error-message">
+        {{ errorMessage }}
+      </div>
+      <div *ngIf="successMessage" class="success-message">
+        {{ successMessage }}
+      </div>
 </div>
