--- a/Client/src/app/ticket/ticket.component.css
+++ b/Client/src/app/ticket/ticket.component.css
@@ -22,3 +22,17 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.register-container .error-message {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: red;
+  border-radius: 5px;
+}
+
+.register-container .success-message {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: green;
+  border-radius: 5px;
+}
