--- a/Client/src/app/admin-station/admin-station.component.css
+++ b/Client/src/app/admin-station/admin-station.component.css
@@ -16,7 +16,7 @@
     padding: 10px;
     margin: auto;
     margin-bottom: 20px;
-    background-color: green;
+    background-color: blue;
     color: #fff;
     border: none;
     border-radius: 5px;
