Fix user visibility of data, after deletion data now gets fetched again

--- a/Client/src/app/admin-categories/admin-categories.component.html
+++ b/Client/src/app/admin-categories/admin-categories.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let category of categories" (click)="onCategoryClick(category.category_id)">
-    <app-admin-category [category]="category"></app-admin-category>
+    <app-admin-category [category]="category" (fetchRequest)="onFetchRequested()"></app-admin-category>
 </div>
 
 <div class="create-category-container">
