--- a/Client/src/app/admin-models/admin-models.component.html
+++ b/Client/src/app/admin-models/admin-models.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let model of models" (click)="onModelClick(model.model_id)">
-    <app-admin-model [model]="model"></app-admin-model>
+    <app-admin-model [model]="model" (fetchRequest)="onFetchRequested()"></app-admin-model>
 </div>
 
 <div class="create-model-container">
