--- a/Client/src/app/nav-bar/nav-bar.component.html
+++ b/Client/src/app/nav-bar/nav-bar.component.html
@@ -5,6 +5,7 @@
         <a (click)="navigateToAdminCategories()">Admin Categories</a>
         <a (click)="navigateToAdminModels()">Admin Models</a>
         <a (click)="navigateToAdminBikes()">Admin Bikes</a>
+        <a (click)="navigateToOverdueTickets()">Overdue Tickets</a>
     </ng-container>
     <div class="right">
         <ng-container *ngIf="isLoggedIn(); else notLoggedIn">
