--- a/Client/src/app/admin-individual-bikes/admin-individual-bikes.component.html
+++ b/Client/src/app/admin-individual-bikes/admin-individual-bikes.component.html
@@ -25,7 +25,7 @@
 
         <div>
             <label>Status:</label>
-            <input type="text" formControlName="status">
+            <input type="text" formControlName="status" [readonly]="true">
         </div>
 
       <button type="submit">Submit</button>
