Implementation of parking place view

--- a/Client/src/app/admin-station-details/admin-station-details.component.css
+++ b/Client/src/app/admin-station-details/admin-station-details.component.css
@@ -23,6 +23,18 @@
     border-radius: 5px;
   }
 
+button {
+    display: block;
+    width: 400px;
+    padding: 10px;
+    margin-bottom: 20px;
+    background-color: blue;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
   .change-station-container button {
     display: block;
     width: 100%;
