--- a/Client/src/app/admin-station-details/admin-station-details.component.html
+++ b/Client/src/app/admin-station-details/admin-station-details.component.html
@@ -15,6 +15,8 @@
       <div *ngIf="reviews.length === 0">
         <p>No reviews found.</p>
     </div>
+
+    <button (click)="navigateToParkingPlaces()">See Parking Places</button>
 </div>
 
 <div class="change-station-container">
