--- a/Client/src/app/admin-parking-places/admin-parking-places.component.css
+++ b/Client/src/app/admin-parking-places/admin-parking-places.component.css
@@ -11,7 +11,7 @@ button {
     cursor: pointer;
 }
 
-.create-parking-place-container {
+.create-parking-place-container, .parking-place-capacity-container {
     width: 350px;
     border-radius: 10px;
     border: 1px solid #AAAAAA;
